--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li><a href="#none">MENU</a>
                             <ul class="depth2">
                                 <li><a href="#none">신제품</a></li>
-                                <li><a href="menu2_2.html">조각케이크</a></li>
+                                <li><a href="menu2_2.html" class="sub">조각케이크</a></li>
                                 <li><a href="#none">홀케이크</a></li>
                                 <li><a href="#none">음료</a></li>
                                 <li><a href="#none">빙수</a></li>
